Preventing overflow of messages

--- a/public/style.css
+++ b/public/style.css
@@ -91,6 +91,7 @@ video {
 
 .main_chat_window {
     flex-grow: 1;
+    overflow-y: scroll;
 }
 
 .main__messages_container {
